background image not showing bug cleared

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -74,7 +74,7 @@ body{
 
 .skills {
   background-color: var(--secondary-color);
-  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='40' patternTransform='scale(1) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(240, 7%, 18%, 0)'/><path d='M11 6a5 5 0 01-5 5 5 5 0 01-5-5 5 5 0 015-5 5 5 0 015 5'  stroke-width='1' stroke='none' fill='hsla(47, 0%, 100%, 0.07)'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
+  background-image: url("data:image/svg+xml,%3Csvg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3Cpattern id='a' patternUnits='userSpaceOnUse' width='40' height='40' patternTransform='scale(1) rotate(0)'%3E%3Crect x='0' y='0' width='100%' height='100%' fill='hsla(240, 7%, 18%, 0)'/%3E%3Cpath d='M11 6a5 5 0 01-5 5 5 5 0 01-5-5 5 5 0 015-5 5 5 0 015 5' stroke-width='1' stroke='none' fill='hsla(47, 0%, 100%, 0.07)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/%3E%3C/svg%3E");
   color: var(--main-color);
 }
 
